@@ -18,7 +18,12 @@ Setup
 
 To enable the extension in your Kotti site, activate the configurator:
 
-  kotti.configurators = kotti_contactform.kotti_configure
+    kotti.configurators =
+        kotti_settings.kotti_configure
+        kotti_contactform.kotti_configure
+
+Please note that ``kotti_contactform >= 0.4`` depends on kotti_settings_,
+so you have to list it in your ``kotti.configurators`` too.
 
 ``kotti_contactform`` uses ``pyramid_mailer`` for sending mails and
 tries to use your mailserver at localhost:25. If these defaults don't
@@ -43,6 +48,19 @@ For integration of alembic in your environment please refer to the
 `alembic documentation`_. If you have problems with the upgrade,
 please create a new issue in the `tracker`_.
 
+Settings
+========
+
+Point your browser to http://your.domain/@@settings to get to the settingspage
+or use the submenupoint of 'Site Setup'. There you can enable to use a captcha
+in your contact forms. For the captcha the reCAPATCHA_ service is used. You have
+to sign up to get a key pair in order to use the service on your site. In the
+settings you have to save your public and your private key. Have a look to
+https://developers.google.com/recaptcha/ to sign up and get your keys.
+
+
 .. _alembic: http://pypi.python.org/pypi/alembic
 .. _alembic documentation: http://alembic.readthedocs.org/en/latest/index.html
 .. _tracker: https://github.com/chrneumann/kotti_contactform/issues
+.. _kotti_settings: http://pypi.python.org/pypi/kotti_settings
+.. _reCAPTCHA: https://developers.google.com/recaptcha/
