@@ -12,7 +12,9 @@ pyramid.includes =
 sqlalchemy.url = sqlite:///%(here)s/Kotti.db
 kotti.site_title = Kotti with contact forms
 kotti.secret = qwerty
-kotti.configurators = kotti_contactform.kotti_configure
+kotti.configurators =
+    kotti_settings.kotti_configure
+    kotti_contactform.kotti_configure
 
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
