@@ -11,10 +11,10 @@
       ${api.context.description}
     </p>
     <div class="row-fluid">
-      <div class="span6">
+      <div class="span5">
         ${structure: api.context.body}
       </div>
-      <div class="span6">
+      <div class="span7">
         <div tal:condition="form">
           ${structure: form}
         </div>
