@@ -6,11 +6,13 @@ README = open(os.path.join(here, 'README.rst')).read()
 CHANGES = open(os.path.join(here, 'CHANGES.txt')).read()
 
 install_requires = [
-    'Kotti >= 0.8a1',
+    'Kotti >= 0.9.2',
+    'kotti_settings',
     'Babel',
     'Pillow',
     'colander >= 0.9.8',
     'alembic',
+    'httplib2',
 ]
 
 
